<resources>
 <string name="app_dub_sub_episode_text_format" formatted="true">%1$s Ep %2$d</string>
 <string name="cast_format" formatted="true">Cast: %s</string>
 <string name="next_episode_format" formatted="true">Episode %d will be released in</string>
 <string name="next_season_episode_format" formatted="true">Season %1$d Episode %2$d will be released in</string>
 <string name="next_episode_time_day_format" formatted="true">%1$dd %2$dh %3$dm</string>
 <string name="next_episode_time_hour_format" formatted="true">%1$dh %2$dm</string>
 <string name="next_episode_time_min_format" formatted="true">%dm</string>
 <string name="download_time_left_hour_min_sec_format" formatted="true">%1$dh %2$dm %3$ds</string>
 <string name="download_time_left_min_sec_format" formatted="true">%1$dm %2$ds</string>
 <string name="download_time_left_sec_format" formatted="true">%1$ds</string>
 <string name="result_poster_img_des">Poster</string>
 <string name="search_poster_img_des">Poster</string>
 <string name="episode_poster_img_des">Episode Poster</string>
 <string name="home_main_poster_img_des">Main Poster</string>
 <string name="home_next_random_img_des">Next Random</string>
 <string name="go_back_img_des">Go back</string>
 <string name="play_from_beginning_img_des">Play from the Beginning</string>
 <string name="home_change_provider_img_des">Change Provider</string>
 <string name="preview_background_img_des">Preview Background</string>
 <string name="player_speed_text_format" formatted="true">Speed (%.2fx)</string>
 <string name="rated_format" formatted="true">Rated: %.1f</string>
 <string name="new_update_format" formatted="true">New update found!\n%1$s -&gt; %2$s</string>
 <string name="filler" formatted="true">Filler</string>
 <string name="duration_format" formatted="true">%d min</string>
 <string name="app_name">Noir</string>
 <string name="play_with_app_name">Play with Noir</string>
 <string name="title_home">Home</string>
 <string name="title_search">Search</string>
 <string name="title_downloads">Downloads</string>
 <string name="download_queue">Download queue</string>
 <string name="title_settings">Settings</string>
 <string name="search_hint">Search</string>
 <string name="search_hint_site" formatted="true">Search %s</string>
 <string name="speech_recognition_unavailable">Speech recognition is not available</string>
 <string name="begin_speaking">Begin Speaking</string>
 <string name="no_data">No Data</string>
 <string name="episode_more_options_des">More Options</string>
 <string name="next_episode">Next episode</string>
 <string name="result_tags">Genres</string>
 <string name="result_share">Share</string>
 <string name="result_open_in_browser">Open In Browser</string>
 <string name="browser">Browser</string>
 <string name="skip_loading">Skip Loading</string>
 <string name="loading">Loading</string>
 <string name="type_watching">Watching</string>
 <string name="type_on_hold">On-Hold</string>
 <string name="type_completed">Completed</string>
 <string name="type_dropped">Dropped</string>
 <string name="type_plan_to_watch">Plan to Watch</string>
 <string name="type_re_watching">Rewatching</string>
 <string name="play_movie_button">Play Movie</string>
 <string name="play_trailer_button">Play Trailer</string>
 <string name="play_livestream_button">Play Livestream</string>
 <string name="play_torrent_button">Stream Torrent</string>
 <string name="play_full_series_button">Play Full Series</string>
 <string name="torrent_info">This video is a Torrent, this means that your video activity can be tracked.\nMake sure you understand Torrenting before continuing.</string>
 <string name="pick_source">Sources</string>
 <string name="pick_subtitle">Subtitles</string>
 <string name="reload_error">Retry connection</string>
 <string name="go_back">Go Back</string>
 <string name="play_episode">Play Episode</string>
 <string name="download">Download</string>
 <string name="downloaded">Downloaded</string>
 <string name="downloading">Downloading</string>
 <string name="download_paused">Download Paused</string>
 <string name="download_started">Download Started</string>
 <string name="download_failed">Download Failed</string>
 <string name="download_canceled">Download Canceled</string>
 <string name="download_done">Download Done</string>
 <string name="downloads_delete_select">Select Items to Delete</string>
 <string name="downloads_empty">There are currently no downloads.</string>
 <string name="queue_empty_message">There are currently no queued downloads.</string>
 <string name="offline_file">Available for watching offline</string>
 <string name="select_all">Select All</string>
 <string name="deselect_all">Deselect All</string>
 <string name="update_started">Update Started</string>
 <string name="stream">Network stream</string>
 <string name="open_local_video">Open local video</string>
 <string name="error_loading_links_toast">Error Loading Links</string>
 <string name="links_reloaded_toast">Links Reloaded</string>
 <string name="download_storage_text">Internal Storage</string>
 <string name="app_dubbed_text">Dub</string>
 <string name="app_subbed_text">Sub</string>
 <string name="popup_delete_file">Delete File</string>
 <string name="popup_play_file">Play File</string>
 <string name="popup_resume_download">Resume Download</string>
 <string name="popup_pause_download">Pause Download</string>
 <string name="home_more_info">More info</string>
 <string name="home_expanded_hide">Hide</string>
 <string name="home_play">Play</string>
 <string name="home_info">Info</string>
 <string name="filter_bookmarks">Filter Bookmarks</string>
 <string name="error_bookmarks_text">Bookmarks</string>
 <string name="action_remove_from_bookmarks">Remove</string>
 <string name="action_add_to_bookmarks">Set watch status</string>
 <string name="sort_apply">Apply</string>
 <string name="sort_copy">Copy</string>
 <string name="sort_close">Close</string>
 <string name="sort_clear">Clear</string>
 <string name="sort_save">Save</string>
 <string name="repo_copy_label">Repository name and URL</string>
 <string name="toast_copied">copied!</string>
 <string name="subscribe_tooltip">New episode notification</string>
 <string name="result_search_tooltip">Search in other extensions</string>
 <string name="recommendations_tooltip">Show recommendations</string>
 <string name="player_speed">Player Speed</string>
 <string name="subtitles_settings">Subtitle Settings</string>
 <string name="subs_text_color">Text Color</string>
 <string name="subs_outline_color">Outline Color</string>
 <string name="subs_background_color">Background Color</string>
 <string name="subs_window_color">Window Color</string>
 <string name="subs_edge_type">Edge Type</string>
 <string name="subs_subtitle_elevation">Subtitle Elevation</string>
 <string name="subs_font">Font</string>
 <string name="subs_font_size">Font Size</string>
 <string name="search_provider_text_providers">Search using providers</string>
 <string name="search_provider_text_types">Search using types</string>
 <string name="benene_count_text">%d Benenes given to devs</string>
 <string name="benene_count_text_none">No Benenes given</string>
 <string name="subs_auto_select_language">Auto-Select Language</string>
 <string name="subs_download_languages">Download Languages</string>
 <string name="subs_subtitle_languages">Subtitle Language</string>
 <string name="subs_hold_to_reset_to_default">Hold to reset to default</string>
 <string name="subs_import_text" formatted="true">Import fonts by placing them in %s</string>
 <string name="continue_watching">Continue Watching</string>
 <string name="action_remove_watching">Remove</string>
 <string name="action_open_watching">More Info</string>
 <string name="action_open_play">@string/home_play </string>
 <string name="vpn_might_be_needed">A VPN might be needed for this provider to work correctly</string>
 <string name="vpn_torrent">This provider is a torrent, a VPN is recommended</string>
 <string name="provider_info_meta">Metadata is not provided by site, video loading will fail if it does not exist on site.</string>
 <string name="torrent_plot">Description</string>
 <string name="normal_no_plot">No Plot Found</string>
 <string name="torrent_no_plot">No Description Found</string>
    <string name="noir_sound_enabled_key">noir_sound_enabled_key</string>
    <string name="noir_sound_preset_key">noir_sound_preset_key</string>
    <string name="noir_sound_settings">Noir Sound Engine</string>
    <string name="noir_sound_settings_des">Pengolah suara di dalam aplikasi dengan pembatas aman. Audio terdengar penuh dan bersih tanpa risiko pecah.</string>
    <string name="noir_sound_presets">Profil Suara Noir</string>
    <string name="noir_sound_agc_key">noir_sound_agc_key</string>
    <string name="noir_sound_agc">Penguat Adegan Pelan</string>
    <string name="noir_glass_key">noir_glass_key</string>
    <string name="noir_motion_key">noir_motion_key</string>
    <string name="noir_motes_key">noir_motes_key</string>
    <string name="noir_dock_feedback_key">noir_dock_feedback_key</string>
    <string name="noir_anim_key">noir_anim_key</string>
    <string name="noir_anim_title">Matikan Semua Animasi</string>
    <string name="noir_anim_des">Menonaktifkan aura, gelembung, dan animasi beranda untuk pengalaman yang tenang dan hemat baterai.</string>
    <string name="noir_glass_title">Kehalusan Kaca</string>
    <string name="noir_glass_des">Mengatur ketebalan kaca pada kolom pencarian, dock, dan panel pengaturan.</string>
    <string name="noir_motion_title">Gerak Warna Aura</string>
    <string name="noir_motion_des">Mengatur tempo dan kekuatan warna aura. Tenang untuk suasana kalem, Lincah untuk warna yang lebih hidup.</string>
    <string name="noir_motes_title">Model Gelembung Aura</string>
    <string name="noir_motes_des">Pilih perilaku gelembung cahaya pada aura. Hidup mati berarti gelembung terbit dan tenggelam secara alami.</string>
    <string name="noir_dock_title">Umpan Balik Tab Bawah</string>
    <string name="noir_dock_des">Ikon mengecil saat disentuh dan memantul halus saat dilepas.</string>
    <string name="noir_sound_agc_des">Meninggikan dialog dan adegan berbisik secara otomatis agar terdengar jelas. Suara keras tetap dibatasi agar tidak pecah.</string>
    <string name="noir_sync_btt">Sinkronkan</string>
    <string name="noir_sync_pick">Pilih satu subtitle dari daftar dulu</string>
    <string name="noir_sync_no_source">Sumber video belum siap untuk sinkronisasi</string>
    <string name="noir_sync_running">NoirSync: membaca audio video…</string>
 <string name="show_log_cat">Show Logcat </string>
 <string name="test_log">Log</string>
 <string name="picture_in_picture">Picture-in-picture</string>
 <string name="picture_in_picture_des">Continues playback in a miniature player on top of other apps</string>
 <string name="player_size_settings">Player resize button</string>
 <string name="player_size_settings_des">Remove the black borders</string>
 <string name="player_subtitles_settings">Subtitles</string>
 <string name="player_subtitles_settings_des">Player subtitles settings</string>
 <string name="chromecast_subtitles_settings">Chromecast Subtitles</string>
 <string name="chromecast_subtitles_settings_des">Chromecast subtitles settings</string>
 <string name="eigengraumode_settings">Playback speed</string>
 <string name="speed_setting_summary">Adds a speed option in the player</string>
 <string name="swipe_to_seek_settings">Swipe to seek</string>
 <string name="swipe_to_seek_settings_des">Swipe from side to side to control your position in a video</string>
 <string name="search">Search</string>
 <string name="account">account</string>
 <string name="home_source">Source</string>
 <string name="home_random">Random</string>
 <string name="go_to_downloads">Go to Downloads</string>
 <string name="reload_provider">Reload Provider</string>
 <string name="noir_hero_detail">Detail</string>
 <string name="noir_hero_random">Acak</string>
</resources>